--- a/weather/city.html
+++ b/weather/city.html
@@ -2,8 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="../public/lib-flexible-master/build/flexible.js" ></script>
+    <meta name="viewport"   content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="css/reset.css">
+    <script src="../public/zepto/src/zepto.js"></script>
+    <script src="../public/zepto/src/touch.js"></script>
+    <script src="../public/zepto/src/event.js"></script>
     <title>city</title>
-    <link rel="stylesheet" href="">
+    <style>
+        
+    </style>
 </head>
 <body>
     <header>
