--- a/weather/index.html
+++ b/weather/index.html
@@ -7,13 +7,13 @@
 	<link rel="stylesheet" href="css/index.css">
 	<link rel="stylesheet" href="css/reset.css">
 	<script src="../public/zepto/src/zepto.js"></script>
+    <script src="../public/zepto/src/event.js"></script>
 	<script src="../public/zepto/src/touch.js"></script>
-	<script src="../public/zepto/src/event.js"></script>
 	<title>index</title>
 </head>
 <body>
-	<!-- <img src="img/上海.jpg" alt="" class="bgp"> -->
-	<div class="mask"></div>
+	<img src="img/上海.jpg" alt="" class="bgp">
+    <div class="mask"></div>
 	<header class="clearfix">
 		<a href="city.html"></a>
 		<ul>
@@ -75,5 +75,6 @@
 		</li>
 	</ul>
 <script src="js/index.js"></script>
+<script src="js/data.js"></script>
 </body>
 </html>
