--- a/weather/city.html
+++ b/weather/city.html
@@ -6,30 +6,83 @@
     <meta name="viewport"   content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="css/reset.css">
     <script src="../public/zepto/src/zepto.js"></script>
-    <script src="../public/zepto/src/touch.js"></script>
     <script src="../public/zepto/src/event.js"></script>
+    <script src="../public/zepto/src/touch.js"></script>
     <title>city</title>
     <style>
-        
+        body{
+            color:#333;
+        }
+        header{
+            width:10rem;
+            height:1.173333rem;
+            background-color: #2e2b3c;
+        }
+        header h2{
+            font-size: 18px;
+            text-align: center;
+            font-weight: normal;
+            width:4rem;
+            height:1.173333rem;
+            line-height:1.173333rem;
+            position: absolute;
+            left:50%;
+            margin-left:-2rem;
+        }
+        a{
+            display: inline-block;
+            width:0.64rem;
+            height:0.64rem;
+        }
+        .back{
+            float:left;
+            margin: 0.2rem  0 0 0.2rem;
+        }
+        .add{
+            float:right;
+            margin: 0.2rem 0.3rem 0 0;
+        }
+        img{
+            width:0.64rem;
+            height:0.64rem;
+        }
+        li{
+            height:1.6rem;
+            width:8rem;
+            padding: 0 1rem;
+            line-height:1.6rem;
+            border-bottom: 1px solid #f2f2f2;
+            font-size:26px;
+        }
+        li span{
+            color:#999;
+            font-size: 22px;
+            float:right;
+        }
     </style>
 </head>
 <body>
     <header>
-        <a href="" class="back"></a>
+        <a href="index.html" class="back">
+            <img src="img/back.png" alt="">
+        </a>
         <h2>城市管理</h2>
-        <a href="" class="add"></a>
+        <a href="search.html" class="add">
+            <img src="img/add.png" alt="">
+        </a>
     </header>
     <section>
         <ul>
             <li>
-                <em class="current-city">上海</em>
-                <img src="" alt="" class="dingwei">
+                <em>上海</em>
                 <span>当前位置</span>
             </li>
-            <li>
-                <em class="current-city">北京</em>
-            </li>
+            <!--<li>
+                <em>北京</em>
+            </li>-->
         </ul>
     </section>
+    <script src="js/index.js"></script>
+    <script src="js/city.js"></script>
 </body>
 </html>
