--- a/weather/search.html
+++ b/weather/search.html
@@ -2,27 +2,138 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="../public/lib-flexible-master/build/flexible.js" ></script>
+    <meta name="viewport"   content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="css/reset.css">
+    <script src="../public/zepto/src/zepto.js"></script>
+    <script src="../public/zepto/src/event.js"></script>
+    <script src="../public/zepto/src/touch.js"></script>
     <title>city</title>
-    <link rel="stylesheet" href="">
+    <style>
+        header{
+            width:10rem;
+            height:5.333333rem;
+            background: url("img/search-bg.jpg");
+            background-size: 10rem 5.333333rem;
+            position: relative;
+        }
+        header a{
+            display: block;
+            width:0.64rem;
+            height:0.64rem;
+        }
+        .back{
+            float:left;
+            margin: 0.2rem  0 0 0.2rem;
+        }
+        header>P{
+            font-size: 24px;
+            color: #fff;
+            position: absolute;
+            top:2rem;
+            right:1rem;
+        }
+        header form{
+            width:8rem;
+            height:1rem;
+            background: #fafafa;
+            border-top-left-radius:2em;
+            border-top-right-radius:2em;
+            border-bottom-right-radius:2em;
+            border-bottom-left-radius:2em;
+            position: absolute;
+            bottom:1rem;
+            left:50%;
+            margin-left: -4rem;
+            opacity:0.9;
+        }
+        header form input{
+            width:6rem;
+            height:0.8rem;
+            float:left;
+            padding:0.1rem;
+            text-indent: 1em;
+            font-size: 24px;
+            line-height: 1em;
+            border-top-left-radius:2em;
+            border-bottom-left-radius:2em;
+        }
+        header button{
+            width:1.8rem;
+            height:1rem;
+            float:left;
+            border-top-right-radius:2em;
+            border-bottom-right-radius:2em;
+            background: url("img/search.png") center center;
+            background-repeat:no-repeat;
+            background-size: 0.426667rem 0.426667rem;
+            background-color: #08c1fa;
+        }
+        section{
+            color:#333;
+            font-size: 24px;
+        }
+        ul{
+            margin:0 auto;
+            padding-top: 0.4rem;
+        }
+        li{
+            border:1px solid #666;
+            border-radius: 0.3rem;
+            height:1rem;
+            line-height:1rem;
+            width:2rem;
+            margin:0.3rem 0.64rem;
+            text-align:center;
+            float:left;
+        }
+        li.active{
+            border:1px solid #08c1fa;
+        }
+        section>p{
+            text-align: center;
+            color:#666;
+            font-size: 20px;
+            margin-top:0.4rem;
+        }
+        .remind{
+            text-align: center;
+            color:#666;
+            font-size: 20px;
+            position: absolute;
+            bottom:9rem;
+            width:6rem;
+            left:50%;
+            margin-left:-3rem;
+            display: none;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <a href="" class="back"></a>
+        <a href="index.html" class="back">
+            <img src="img/back.png" alt="">
+        </a>
+        <p>世界，一个触碰的距离</p>
         <form action="">
-            <input type="text" name="" id="">
+            <input type="text">
+            <button></button>
         </form>
     </header>
     <section>
+        <p>热门城市</p>
         <ul>
-            <li>
-                <em class="current-city">上海</em>
-                <img src="" alt="" class="dingwei">
-                <span>当前位置</span>
-            </li>
-            <li>
-                <em class="current-city">北京</em>
-            </li>
+            <li>上海</li>
+            <li>北京</li>
+            <li>天津</li>
+            <li>重庆</li>
+            <li>深圳</li>
+            <li>南京</li>
         </ul>
     </section>
+    <p class="remind">添加您想关注的城市</p>
+    <ul class="cityList"></ul>
+    <script src="js/index.js"></script>
+    <script src="js/search.js"></script>
 </body>
 </html>
