--- a/weather/search.html
+++ b/weather/search.html
@@ -48,17 +48,19 @@
             opacity:0.9;
         }
         header form input{
-            width:6rem;
+            width:8rem;
             height:0.8rem;
             float:left;
             padding:0.1rem;
-            text-indent: 1em;
-            font-size: 24px;
-            line-height: 1em;
-            border-top-left-radius:2em;
-            border-bottom-left-radius:2em;
+            text-indent:1.5em;
+            font-size: 22px;
+            line-height: 0.8rem;
+            border:2em;
+            background: url("img/search.png") 0.4rem center;
+            background-repeat:no-repeat;
+            background-size: 0.426667rem 0.426667rem;
         }
-        header button{
+       /* header button{
             width:1.8rem;
             height:1rem;
             float:left;
@@ -68,16 +70,16 @@
             background-repeat:no-repeat;
             background-size: 0.426667rem 0.426667rem;
             background-color: #08c1fa;
-        }
+        }*/
         section{
             color:#333;
             font-size: 24px;
         }
-        ul{
+        section>ul{
             margin:0 auto;
             padding-top: 0.4rem;
         }
-        li{
+        section>ul li{
             border:1px solid #666;
             border-radius: 0.3rem;
             height:1rem;
@@ -87,7 +89,7 @@
             text-align:center;
             float:left;
         }
-        li.active{
+        section>ul li.active{
             border:1px solid #08c1fa;
         }
         section>p{
@@ -107,17 +109,32 @@
             margin-left:-3rem;
             display: none;
         }
+        .cityList{
+            width:10rem;
+            position: absolute;
+            top: 5.333333rem;
+            left:0;
+        }
+        .cityList li{
+            width:9rem;
+            height:1.333333rem;
+            line-height:1.333333rem;
+            padding-left: 1rem;
+            color:#333;
+            border-bottom: 1px #999 solid;
+            display:none;
+        }
     </style>
 </head>
 <body>
     <header>
-        <a href="index.html" class="back">
+        <a href="city.html" class="back">
             <img src="img/back.png" alt="">
         </a>
         <p>世界，一个触碰的距离</p>
-        <form action="">
+        <form action="index.html">
             <input type="text">
-            <button></button>
+            <!--<button>取消</button>-->
         </form>
     </header>
     <section>
@@ -132,7 +149,10 @@
         </ul>
     </section>
     <p class="remind">添加您想关注的城市</p>
-    <ul class="cityList"></ul>
+    <ul class="cityList">
+        <li>南京</li>
+        <li>北京</li>
+    </ul>
     <script src="js/index.js"></script>
     <script src="js/search.js"></script>
 </body>
