--- a/weather/search.html
+++ b/weather/search.html
@@ -27,7 +27,7 @@
             margin: 0.2rem  0 0 0.2rem;
         }
         header>P{
-            font-size: 24px;
+            font-size: 22px;
             color: #fff;
             position: absolute;
             top:2rem;
@@ -73,7 +73,7 @@
         }*/
         section{
             color:#333;
-            font-size: 24px;
+            font-size: 22px;
         }
         section>ul{
             margin:0 auto;
@@ -85,7 +85,7 @@
             height:1rem;
             line-height:1rem;
             width:2rem;
-            margin:0.3rem 0.64rem;
+            margin:0.3rem 0.634rem;
             text-align:center;
             float:left;
         }
@@ -139,7 +139,7 @@
     </header>
     <section>
         <p>热门城市</p>
-        <ul>
+        <ul class="clearfix">
             <li>上海</li>
             <li>北京</li>
             <li>天津</li>
