--- a/calendar/index.html
+++ b/calendar/index.html
@@ -2,17 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"   content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <script src="../public/lib-flexible-master/build/flexible_css.debug.js"></script>
-    <script src="../public/lib-flexible-master/build/flexible.debug.js"></script>
+    <meta name="viewport"   content="width=device-width, maximum-scale=1, user-scalable=no">
+    <script src="../public/lib-flexible-master/build/flexible.js" ></script>
     <script src="../public/zepto/src/zepto.js"></script>
     <script src="../public/zepto/src/event.js"></script>
     <script src="../public/zepto/src/touch.js"></script>
-    <link rel="stylesheet" href="css/public/reset.css" />
-    <link rel="stylesheet" href="css/public/global.css" />
-    <link rel="stylesheet" href="css/public/public.css" />
-    <link rel="stylesheet" href="css/filter.css" />
-    <title>filter</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/index.css" />
+    <title>index</title>
 </head>
 <body>
  <!-- 头部-->
@@ -82,7 +79,7 @@
         <span>3</span>夜)
     </p>
     <p class="apply">下单</p>
-<script src="js/filter.js"></script>
+<script src="js/index.js"></script>
 </div>
 </body>
 </html>
