--- a/weather/index.html
+++ b/weather/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<script src="../public/lib-flexible-master/build/flexible.js" ></script>
-	<meta name="viewport"   content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<meta name="viewport"   content="width=device-width, maximum-scale=1, user-scalable=no">
 	<link rel="stylesheet" href="css/index.css">
 	<link rel="stylesheet" href="css/reset.css">
 	<script src="../public/zepto/src/zepto.js"></script>
