--- a/calendar/index.html
+++ b/calendar/index.html
@@ -17,9 +17,9 @@
     <a class="prev-month">上月</a>
     <p class="choosed-time">
     </p>
-    <a class="icon-sanjiao">
+   <!-- <a class="icon-sanjiao">
         <img src="img/sanjiao.png">
-    </a>
+    </a>-->
     <a class="next-month">下月</a>
 </header>
 <!-- 主体部分 -->
@@ -45,12 +45,12 @@
         <li class="past">9</li>-->
     </ul>
 </div>
- <div class="list">
+ <!--<div class="list">
      <div>
          <p>
-             <span>12</span>
+             <span></span>
              月
-             <em>5</em>
+             <em></em>
              日
          </p>
          <strong>星期一</strong>
@@ -60,7 +60,7 @@
      </div>
      <p class="remark"></p>
  </div>
- <div class="today">今天</div>
+ <div class="today">今天</div>-->
 <script src="js/index.js"></script>
 </div>
 </body>
