--- a/weather/index.html
+++ b/weather/index.html
@@ -5,7 +5,6 @@
 	<script src="../public/lib-flexible-master/build/flexible.js" ></script>
 	<meta name="viewport"   content="width=device-width, maximum-scale=1, user-scalable=no">
 	<link rel="stylesheet" href="css/index.css">
-	<link rel="stylesheet" href="css/reset.css">
 	<script src="../public/zepto/src/zepto.js"></script>
     <script src="../public/zepto/src/event.js"></script>
 	<script src="../public/zepto/src/touch.js"></script>
@@ -23,54 +22,54 @@
 		</ul>
 	</header>
 	<section class="current-weather">
-		<p class="city">北京</p>
-		<p class="weather">多云</p>
-		<p class="temp">7</p>
+		<p class="city"></p>
+		<p class="weather"></p>
+		<p class="temp"></p>
 	</section>
 	<ul class="future-weather">
 		<li>
 			<img src="" alt="">
 			<div>
-				<p class="day">今天</p>
+				<p class="day"></p>
 				<p class="wea">
-					<span>晴转多云</span>
-					<strong>良</strong>
+					<span></span>
+					<strong></strong>
 				</p>
 			</div>
 			<p class="lh">
-				<span>-1</span>°
+				<span></span>°
 				/
-				<strong>4</strong>°
+				<strong></strong>°
 			</p>
 		</li>
 		<li>
 			<img src="" alt="">
 			<div>
-				<p class="day">明天</p>
+				<p class="day"></p>
 				<p class="wea">
-					<span>晴转多云</span>
-					<strong>良</strong>
+					<span></span>
+					<strong></strong>
 				</p>
 			</div>
 			<p class="lh">
-				<span>-1</span>°
+				<span></span>°
 				/
-				<strong>4</strong>°
+				<strong></strong>°
 			</p>
 		</li>
 		<li>
 			<img src="" alt="">
 			<div>
-				<p class="day">后天</p>
+				<p class="day"></p>
 				<p class="wea">
-					<span>晴转多云</span>
-					<strong>良</strong>
+					<span></span>
+					<strong></strong>
 				</p>
 			</div>
 			<p class="lh">
-				<span>-1</span>°
+				<span></span>°
 				/
-				<strong>4</strong>°
+				<strong></strong>°
 			</p>
 		</li>
 	</ul>
