--- a/weather/search.html
+++ b/weather/search.html
@@ -4,127 +4,11 @@
     <meta charset="UTF-8">
     <script src="../public/lib-flexible-master/build/flexible.js" ></script>
     <meta name="viewport"   content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/search.css">
     <script src="../public/zepto/src/zepto.js"></script>
     <script src="../public/zepto/src/event.js"></script>
     <script src="../public/zepto/src/touch.js"></script>
     <title>city</title>
-    <style>
-        header{
-            width:10rem;
-            height:5.333333rem;
-            background: url("img/search-bg.jpg");
-            background-size: 10rem 5.333333rem;
-            position: relative;
-        }
-        header a{
-            display: block;
-            width:0.64rem;
-            height:0.64rem;
-        }
-        .back{
-            float:left;
-            margin: 0.2rem  0 0 0.2rem;
-        }
-        header>P{
-            font-size: 22px;
-            color: #fff;
-            position: absolute;
-            top:2rem;
-            right:1rem;
-        }
-        header form{
-            width:8rem;
-            height:1rem;
-            background: #fafafa;
-            border-top-left-radius:2em;
-            border-top-right-radius:2em;
-            border-bottom-right-radius:2em;
-            border-bottom-left-radius:2em;
-            position: absolute;
-            bottom:1rem;
-            left:50%;
-            margin-left: -4rem;
-            opacity:0.9;
-        }
-        header form input{
-            width:8rem;
-            height:0.8rem;
-            float:left;
-            padding:0.1rem;
-            text-indent:1.5em;
-            font-size: 22px;
-            line-height: 0.8rem;
-            border:2em;
-            background: url("img/search.png") 0.4rem center;
-            background-repeat:no-repeat;
-            background-size: 0.426667rem 0.426667rem;
-        }
-       /* header button{
-            width:1.8rem;
-            height:1rem;
-            float:left;
-            border-top-right-radius:2em;
-            border-bottom-right-radius:2em;
-            background: url("img/search.png") center center;
-            background-repeat:no-repeat;
-            background-size: 0.426667rem 0.426667rem;
-            background-color: #08c1fa;
-        }*/
-        section{
-            color:#333;
-            font-size: 22px;
-        }
-        section>ul{
-            margin:0 auto;
-            padding-top: 0.4rem;
-        }
-        section>ul li{
-            border:1px solid #666;
-            border-radius: 0.3rem;
-            height:1rem;
-            line-height:1rem;
-            width:2rem;
-            margin:0.3rem 0.634rem;
-            text-align:center;
-            float:left;
-        }
-        section>ul li.active{
-            border:1px solid #08c1fa;
-        }
-        section>p{
-            text-align: center;
-            color:#666;
-            font-size: 20px;
-            margin-top:0.4rem;
-        }
-        .remind{
-            text-align: center;
-            color:#666;
-            font-size: 20px;
-            position: absolute;
-            bottom:9rem;
-            width:6rem;
-            left:50%;
-            margin-left:-3rem;
-            display: none;
-        }
-        .cityList{
-            width:10rem;
-            position: absolute;
-            top: 5.333333rem;
-            left:0;
-        }
-        .cityList li{
-            width:9rem;
-            height:1.333333rem;
-            line-height:1.333333rem;
-            padding-left: 1rem;
-            color:#333;
-            border-bottom: 1px #999 solid;
-            display:none;
-        }
-    </style>
 </head>
 <body>
     <header>
